# CePing

./: .gitignore  DEVELOP_LOG.md  Makefile  README.md  inference_result.html  pyproject.toml  run_eval.py  setup.py  training_result.json
.agents/: AGENTS.md  REVIEWER_CHECKLIST.md
docs/: README.md  architecture.md  architecture_decoupling.md  architecture_design_proposal.md  architecture_gap_analysis.md  architecture_v3_proposal.md  cache_aware_kernel_design.md  communication.md  data_sources_wiki.md  debug_guide.md  dsv3_timing_analysis.md  examples.md  frontend_design.md  kernel_api.md  kernel_migration_guide.md  kernel_modeling.md  model_evaluation_wiki.md  roofline_model.md  topology.md  unified_modeling_design.md  unified_modeling_torch_like.md  validation_design.md  web2_design.md  workflow.md
examples/: kernel_api_example.py  layer_builders_example.py
llm_perf/: __init__.py  __main__.py
scripts/: check_type_alignment.py  run_model_tests.py  start_web.sh  verify_model_memory.py
tests/: __init__.py  run_tests.py  test_analyzer.py  test_app.py  test_backend_standalone.py  test_cache_aware_attention.py  test_cache_aware_linear.py  test_cli.py  test_colocate.py  test_compute_kernel.py  test_config_loader.py  test_deepseek.py  test_device.py  test_diffusion_activation.py  test_encoder.py  test_first_create.py  test_framework_overhead.py  test_frontend_decoupling.py  test_handlers.py  test_helpers.py  test_hunyuan_image.py  test_hunyuan_video_dit.py  test_hunyuan_video_dit_blocks.py  test_hunyuan_video_edge_cases.py  test_hunyuan_video_layers.py  test_hunyuan_video_vae.py  test_inference_breakdown.py  test_integration.py  test_integration_modeling.py  test_kernel_backend.py  test_modeling_models.py  test_modeling_phase1.py  test_modeling_phase2.py  test_modeling_pp.py  test_modeling_vision.py  test_modeling_wan.py  test_models.py  (+21 more)
web/: app.py  (+1 more)
(+353 files in other folders)
