[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-perf"
version = "0.1.0"
description = "LLM Training and Inference Performance Evaluator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "LLM Performance Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "black>=22.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
web = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "cryptography>=41.0.0",
    "openpyxl>=3.0.0",
]
all = [
    "llm-perf[dev,web]",
]

[project.scripts]
llm-perf = "llm_perf.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_perf*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["llm_perf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto -v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]